Adding styles in cards for projects

--- a/index.html
+++ b/index.html
@@ -49,13 +49,38 @@
 
     </header>
     <main>
-        <section>
-            <article>1</article>
-            <article>2</article>
-            <article>3</article>
-            <article>4</article>
-            <article>5</article>
-            <article>6</article>
+        <section class="project-container">
+            <h1>My Projects</h1>
+            <article class="project-item">
+                <h2 class="project-item_title">Super Cool Project</h2>
+                <p class="project-item_description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur hic voluptate tempore accusamus eius accusantium vel nesciunt, aspernatur consequatur, quae eligendi labore sapiente dolor sint porro obcaecati temporibus explicabo repudiandae.</p>
+                <div class="project-item_actions"><i class="far fa-star"></i><i class="far fa-eye"></i><i class="fas fa-code-branch"></i></div>
+            </article>
+            <article class="project-item">
+                <h2 class="project-item_title">Super Cool Project</h2>
+                <p class="project-item_description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur hic voluptate tempore accusamus eius accusantium vel nesciunt, aspernatur consequatur, quae eligendi labore sapiente dolor sint porro obcaecati temporibus explicabo repudiandae.</p>
+                <div class="project-item_actions"><i class="far fa-star"></i><i class="far fa-eye"></i><i class="fas fa-code-branch"></i></div>
+            </article>
+            <article class="project-item">
+                <h2 class="project-item_title">Super Cool Project</h2>
+                <p class="project-item_description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur hic voluptate tempore accusamus eius accusantium vel nesciunt, aspernatur consequatur, quae eligendi labore sapiente dolor sint porro obcaecati temporibus explicabo repudiandae.</p>
+                <div class="project-item_actions"><i class="far fa-star"></i><i class="far fa-eye"></i><i class="fas fa-code-branch"></i></div>
+            </article>
+            <article class="project-item">
+                <h2 class="project-item_title">Super Cool Project</h2>
+                <p class="project-item_description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur hic voluptate tempore accusamus eius accusantium vel nesciunt, aspernatur consequatur, quae eligendi labore sapiente dolor sint porro obcaecati temporibus explicabo repudiandae.</p>
+                <div class="project-item_actions"><i class="far fa-star"></i><i class="far fa-eye"></i><i class="fas fa-code-branch"></i></div>
+            </article>
+            <article class="project-item">
+                <h2 class="project-item_title">Super Cool Project</h2>
+                <p class="project-item_description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur hic voluptate tempore accusamus eius accusantium vel nesciunt, aspernatur consequatur, quae eligendi labore sapiente dolor sint porro obcaecati temporibus explicabo repudiandae.</p>
+                <div class="project-item_actions"><i class="far fa-star"></i><i class="far fa-eye"></i><i class="fas fa-code-branch"></i></div>
+            </article>
+            <article class="project-item">
+                <h2 class="project-item_title">Super Cool Project</h2>
+                <p class="project-item_description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur hic voluptate tempore accusamus eius accusantium vel nesciunt, aspernatur consequatur, quae eligendi labore sapiente dolor sint porro obcaecati temporibus explicabo repudiandae.</p>
+                <div class="project-item_actions"><i class="far fa-star"></i><i class="far fa-eye"></i><i class="fas fa-code-branch"></i></div>
+            </article>
         </section>
         <aside>
             <section>Announcements</section>
