--- a/index.html
+++ b/index.html
@@ -57,35 +57,79 @@
                 <div class="project-item_actions"><i class="far fa-star"></i><i class="far fa-eye"></i><i class="fas fa-code-branch"></i></div>
             </article>
             <article class="project-item">
-                <h2 class="project-item_title">Super Cool Project</h2>
+                <h2 class="project-item_title">Less Cool Project</h2>
                 <p class="project-item_description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur hic voluptate tempore accusamus eius accusantium vel nesciunt, aspernatur consequatur, quae eligendi labore sapiente dolor sint porro obcaecati temporibus explicabo repudiandae.</p>
                 <div class="project-item_actions"><i class="far fa-star"></i><i class="far fa-eye"></i><i class="fas fa-code-branch"></i></div>
             </article>
             <article class="project-item">
-                <h2 class="project-item_title">Super Cool Project</h2>
+                <h2 class="project-item_title">Impossible App</h2>
                 <p class="project-item_description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur hic voluptate tempore accusamus eius accusantium vel nesciunt, aspernatur consequatur, quae eligendi labore sapiente dolor sint porro obcaecati temporibus explicabo repudiandae.</p>
                 <div class="project-item_actions"><i class="far fa-star"></i><i class="far fa-eye"></i><i class="fas fa-code-branch"></i></div>
             </article>
             <article class="project-item">
-                <h2 class="project-item_title">Super Cool Project</h2>
+                <h2 class="project-item_title">Easy Peasy App</h2>
                 <p class="project-item_description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur hic voluptate tempore accusamus eius accusantium vel nesciunt, aspernatur consequatur, quae eligendi labore sapiente dolor sint porro obcaecati temporibus explicabo repudiandae.</p>
                 <div class="project-item_actions"><i class="far fa-star"></i><i class="far fa-eye"></i><i class="fas fa-code-branch"></i></div>
             </article>
             <article class="project-item">
-                <h2 class="project-item_title">Super Cool Project</h2>
+                <h2 class="project-item_title">Ad Blocker</h2>
                 <p class="project-item_description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur hic voluptate tempore accusamus eius accusantium vel nesciunt, aspernatur consequatur, quae eligendi labore sapiente dolor sint porro obcaecati temporibus explicabo repudiandae.</p>
                 <div class="project-item_actions"><i class="far fa-star"></i><i class="far fa-eye"></i><i class="fas fa-code-branch"></i></div>
             </article>
             <article class="project-item">
-                <h2 class="project-item_title">Super Cool Project</h2>
+                <h2 class="project-item_title">Money Maker</h2>
                 <p class="project-item_description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur hic voluptate tempore accusamus eius accusantium vel nesciunt, aspernatur consequatur, quae eligendi labore sapiente dolor sint porro obcaecati temporibus explicabo repudiandae.</p>
                 <div class="project-item_actions"><i class="far fa-star"></i><i class="far fa-eye"></i><i class="fas fa-code-branch"></i></div>
             </article>
         </section>
         <aside>
-            <section>Announcements</section>
-            <section>Trending</section>
-            <!-- <a href="https://www.freepik.com">designed by Catalyststuff - Freepik.com</a> -->
+            <section class="announcements-container">
+                <h1>Announcements</h1>
+                <article class="announcements-item">
+                    <div class="item-container">
+                        <h2 class="item-container_title">Site Maintenance</h2>
+                        <p class="item-container_description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum illo, aliquam nostrum quam eius id distinctio facilis nobis veritatis, enim reprehenderit reiciendis accusamus omnis provident iusto voluptas eligendi natus voluptatem?</p>
+                    </div>
+                    <div class="item-container">
+                        <h2 class="item-container_title">Community Share Day</h2>
+                        <p class="item-container_description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum illo, aliquam nostrum quam eius id distinctio facilis nobis veritatis, enim reprehenderit reiciendis accusamus omnis provident iusto voluptas eligendi natus voluptatem?</p>
+                    </div>
+                    <div class="item-container">
+                        <h2 class="item-container_title">Updated Provacy Policy</h2>
+                        <p class="item-container_description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum illo, aliquam nostrum quam eius id distinctio facilis nobis veritatis, enim reprehenderit reiciendis accusamus omnis provident iusto voluptas eligendi natus voluptatem?</p>
+                    </div>
+                </article>
+            </section>
+            <section class="trending-container">
+                <h1>Trending</h1>
+                <article class="trending-card">
+                    <div class="trending-item">
+                        <img src="/assets/img/cat-image.jpg" alt="" class="trending-image">
+                        <div class="trending-description">
+                            <p>@coolcat</p>
+                            <p>Super Cool Cat</p>
+                        </div>
+                    </div>
+                    <div class="trending-item">
+                        <img src="/assets/img/dino-image.jpg" alt="" class="trending-image">
+                        <div class="trending-description">
+                            <p><b>@happydino</b></p>
+                            <p>Super Happy Dinno</p>
+                        </div>
+                    </div>
+                    <div class="trending-item">
+                        <img src="/assets/img/dog-image.jpg" alt="" class="trending-image">
+                        <div class="trending-description">
+                            <p><b>@cutedog</b></p>
+                            <p>Super Cute Dog</p>
+                        </div>
+                    </div>
+                </article>
+            </section>
+            <!-- <a href="https://www.freepik.com/free-vector/cute-cool-cat-wearing-eyeglasses-hoodie-cartoon-vector-icon-illustration-animal-fashion-icon-concept-isolated-premium-vector-flat-cartoon-style_23006693.htm">Image by catalyststuff</a> on Freepik -->
+            <!-- <a href="https://www.freepik.com/free-vector/cute-dog-sticking-her-tongue-out-cartoon-icon-illustration_12681147.htm#&position=19&from_view=author">Image by catalyststuff</a> on Freepik -->
+            <!-- <a href="https://www.freepik.com/free-vector/cute-blue-tyrannosaurus-rex_10576745.htm#&position=46&from_view=author">Image by catalyststuff</a> on Freepik -->
+            <!-- <a href="https://www.freepik.es/vector-gratis/lindo-husky-perro-sentado-dibujos-animados-vector-icono-ilustracion-animal-naturaleza-icono-concepto-aislado-premium_24921543.htm#query=dog&position=35&from_view=search">Imagen de catalyststuff</a> en Freepik -->
     <script src="./js/script.js"></script>
         </aside>
     </main>
