Finishing Responsive View

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="shortcut icon" href="./assets/img/buildings.png" type="image/jpg">
     <script src="https://kit.fontawesome.com/eeb3265b69.js" crossorigin="anonymous"></script>
-    <title>Admin Panel</title>
+    <title>Dashboard</title>
 </head>
 <body>
     <nav class="dashboard">
@@ -46,7 +47,6 @@
                 <button>Share</button>
             </div>
         </div>
-
     </header>
     <main>
         <section class="project-container">
@@ -131,6 +131,7 @@
         <!-- <a href="https://www.freepik.com/free-vector/cute-dog-sticking-her-tongue-out-cartoon-icon-illustration_12681147.htm#&position=19&from_view=author">Image by catalyststuff</a> on Freepik -->
         <!-- <a href="https://www.freepik.com/free-vector/cute-blue-tyrannosaurus-rex_10576745.htm#&position=46&from_view=author">Image by catalyststuff</a> on Freepik -->
         <!-- <a href="https://www.freepik.es/vector-gratis/lindo-husky-perro-sentado-dibujos-animados-vector-icono-ilustracion-animal-naturaleza-icono-concepto-aislado-premium_24921543.htm#query=dog&position=35&from_view=search">Imagen de catalyststuff</a> en Freepik -->
+        <!-- <a href="https://www.flaticon.com/free-icons/admin" title="admin icons">Admin icons created by Freepik - Flaticon</a>? -->
     </aside>
     <script src="./js/script.js"></script>
 </body>
