--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
             <i class="fas fa-search"></i>
             <input type="search" name="search" id="search">
             <i class="fas fa-bullhorn"></i>
-            <img src="./assets/img/cat-image.jpg" alt="Cat Image">
+            <img src="./assets/img/cat-image.jpg" alt="Cool Cat Wearing Eyeglasses and a Hoodie">
             <span><b>Cool Cat</b></span>
         </div>        
         <div class="header-info">
-            <img src="./assets/img/cat-image.jpg" alt="Cat Image">
+            <img src="./assets/img/cat-image.jpg" alt="Cool Cat Wearing Eyeglasses and a Hoodie">
             <div class="header-info_description">
                 <p>Hi There,</p>
                 <p><b>Cool Cat (@coolcat)</b></p>
@@ -105,21 +105,21 @@
             <h1>Trending</h1>
             <article class="trending-card">
                 <div class="trending-item">
-                    <img src="/assets/img/cat-image.jpg" alt="" class="trending-image">
+                    <img src="/assets/img/cat-image.jpg" alt="Cool Cat Wearing Eyeglasses and a Hoodie" class="trending-image">
                     <div class="trending-description">
                         <p>@coolcat</p>
                         <p>Super Cool Cat</p>
                     </div>
                 </div>
                 <div class="trending-item">
-                    <img src="/assets/img/dino-image.jpg" alt="" class="trending-image">
+                    <img src="/assets/img/dino-image.jpg" alt="Cute Blue Tyrannosaurus Rex Image" class="trending-image">
                     <div class="trending-description">
                         <p><b>@happydino</b></p>
                         <p>Super Happy Dinno</p>
                     </div>
                 </div>
                 <div class="trending-item">
-                    <img src="/assets/img/dog-image.jpg" alt="" class="trending-image">
+                    <img src="/assets/img/dog-image.jpg" alt="Cute Dog Sticking Her Tongue Out" class="trending-image">
                     <div class="trending-description">
                         <p><b>@cutedog</b></p>
                         <p>Super Cute Dog</p>
@@ -130,7 +130,6 @@
         <!-- <a href="https://www.freepik.com/free-vector/cute-cool-cat-wearing-eyeglasses-hoodie-cartoon-vector-icon-illustration-animal-fashion-icon-concept-isolated-premium-vector-flat-cartoon-style_23006693.htm">Image by catalyststuff</a> on Freepik -->
         <!-- <a href="https://www.freepik.com/free-vector/cute-dog-sticking-her-tongue-out-cartoon-icon-illustration_12681147.htm#&position=19&from_view=author">Image by catalyststuff</a> on Freepik -->
         <!-- <a href="https://www.freepik.com/free-vector/cute-blue-tyrannosaurus-rex_10576745.htm#&position=46&from_view=author">Image by catalyststuff</a> on Freepik -->
-        <!-- <a href="https://www.freepik.es/vector-gratis/lindo-husky-perro-sentado-dibujos-animados-vector-icono-ilustracion-animal-naturaleza-icono-concepto-aislado-premium_24921543.htm#query=dog&position=35&from_view=search">Imagen de catalyststuff</a> en Freepik -->
         <!-- <a href="https://www.flaticon.com/free-icons/admin" title="admin icons">Admin icons created by Freepik - Flaticon</a>? -->
     </aside>
     <script src="./js/script.js"></script>
