Fixing images url

--- a/index.html
+++ b/index.html
@@ -105,21 +105,21 @@
             <h1>Trending</h1>
             <article class="trending-card">
                 <div class="trending-item">
-                    <img src="/assets/img/cat-image.jpg" alt="Cool Cat Wearing Eyeglasses and a Hoodie" class="trending-image">
+                    <img src="./assets/img/cat-image.jpg" alt="Cool Cat Wearing Eyeglasses and a Hoodie" class="trending-image">
                     <div class="trending-description">
                         <p>@coolcat</p>
                         <p>Super Cool Cat</p>
                     </div>
                 </div>
                 <div class="trending-item">
-                    <img src="/assets/img/dino-image.jpg" alt="Cute Blue Tyrannosaurus Rex Image" class="trending-image">
+                    <img src="./assets/img/dino-image.jpg" alt="Cute Blue Tyrannosaurus Rex Image" class="trending-image">
                     <div class="trending-description">
                         <p><b>@happydino</b></p>
                         <p>Super Happy Dinno</p>
                     </div>
                 </div>
                 <div class="trending-item">
-                    <img src="/assets/img/dog-image.jpg" alt="Cute Dog Sticking Her Tongue Out" class="trending-image">
+                    <img src="./assets/img/dog-image.jpg" alt="Cute Dog Sticking Her Tongue Out" class="trending-image">
                     <div class="trending-description">
                         <p><b>@cutedog</b></p>
                         <p>Super Cute Dog</p>
